src-ken&y/objects/Requisition_Cross_Reference__c.object
<CustomObject>
    <description>Junction object between Requisition Line and Purchase Order Line to establish a many to many relationship between Req Line and PO Line</description>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <label>Purchase Order Line</label>
        <referenceTo>Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Requisition Cross Reference</relationshipLabel>
        <relationshipName>Requisition_Cross_Reference</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requisition_Line__c</fullName>
        <label>Requisition Line</label>
        <referenceTo>Requisition_Line__c</referenceTo>
        <relationshipLabel>Requisition Cross Reference</relationshipLabel>
        <relationshipName>Requisition_Cross_Reference</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Requisition Cross Reference</label>
    <nameField>
        <displayFormat>RCR-{0000000000}</displayFormat>
        <label>Requisition Cross Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requisition Cross Reference</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>